[gd_scene load_steps=14 format=3 uid="uid://dfbvxpxibpwip"]

[ext_resource type="Texture2D" uid="uid://b1t8t3yo7jh0c" path="res://image/imu_splash.png" id="1_ktr5e"]
[ext_resource type="Script" path="res://script/main_menu_1.gd" id="1_nftxs"]
[ext_resource type="Script" path="res://script/main_menu_background.gd" id="2_wgu7x"]
[ext_resource type="Texture2D" uid="uid://tsyno4gmmcjt" path="res://image/imu_runner_logo.png" id="4_3o8ph"]
[ext_resource type="Texture2D" uid="uid://b4bjr6vvox78x" path="res://image/game_ui.png" id="4_5oxs0"]
[ext_resource type="Script" path="res://script/main_logo.gd" id="5_xobm0"]
[ext_resource type="Script" path="res://script/texture_start_btn.gd" id="7_dnebo"]
[ext_resource type="Script" path="res://script/texture_connect_btn.gd" id="7_ws7d8"]
[ext_resource type="Script" path="res://script/texture_setting_btn.gd" id="8_cu0un"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ho2wv"]
atlas = ExtResource("4_5oxs0")
region = Rect2(37.7054, 62.5949, 203.51, 206.438)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lxid"]
atlas = ExtResource("4_5oxs0")
region = Rect2(36.2413, 288.066, 202.046, 144.946)

[sub_resource type="AtlasTexture" id="AtlasTexture_pen4v"]
atlas = ExtResource("4_5oxs0")
region = Rect2(260.249, 279.282, 197.654, 162.515)

[sub_resource type="Theme" id="Theme_3krba"]
default_font_size = 60

[node name="MainMenu1" type="Node2D"]
script = ExtResource("1_nftxs")

[node name="main_menu_background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.67451)
scale = Vector2(0.638632, 0.633574)
texture = ExtResource("1_ktr5e")
centered = false
script = ExtResource("2_wgu7x")

[node name="main_logo" type="Sprite2D" parent="."]
position = Vector2(417, 3)
scale = Vector2(0.326087, 0.331731)
texture = ExtResource("4_3o8ph")
centered = false
script = ExtResource("5_xobm0")

[node name="texture_start_btn" type="TextureButton" parent="."]
offset_left = 460.0
offset_top = 415.0
offset_right = 758.0
offset_bottom = 621.0
texture_normal = SubResource("AtlasTexture_ho2wv")
stretch_mode = 0
script = ExtResource("7_dnebo")

[node name="texture_connect_btn" type="TextureButton" parent="."]
offset_left = 870.0
offset_top = 464.0
offset_right = 1124.0
offset_bottom = 630.0
texture_normal = SubResource("AtlasTexture_2lxid")
stretch_mode = 0
script = ExtResource("7_ws7d8")

[node name="texture_setting_btn" type="TextureButton" parent="."]
offset_left = 874.0
offset_top = 273.0
offset_right = 1129.0
offset_bottom = 435.0
texture_normal = SubResource("AtlasTexture_pen4v")
stretch_mode = 0
script = ExtResource("8_cu0un")

[node name="main_connect_code" type="RichTextLabel" parent="."]
offset_left = 4.0
offset_top = 1.0
offset_right = 577.0
offset_bottom = 418.0
theme = SubResource("Theme_3krba")
theme_override_colors/default_color = Color(0.870588, 0.870588, 0.870588, 1)
text = "CONNECTING..."
scroll_active = false

[connection signal="button_up" from="texture_start_btn" to="." method="_on_texture_start_btn_button_up"]
[connection signal="pressed" from="texture_connect_btn" to="." method="_on_texture_connect_btn_pressed"]
